syntax = "proto3";
package io.hbt.bubblegum.core.kademlia.protobuf;

import "BgKademliaPing.proto";
import "BgKademliaSealedPayload.proto";
import "BgKademliaSync.proto";

message KademliaMessage {

    // Who you are and the context of the message
    string exchangeID = 1;
    string recipient = 2;

    // Who I am
    string originNetwork = 3;
    string originHash = 4;
    string originIP = 5;
    int32 originPort = 6;
    string originLocal = 7;

    // Message content
    oneof message {
        KademliaPing pingMessage = 8;
        KademliaSync syncMessage = 9;
        KademliaSealedPayload payload = 10;
    }
}